--- a/src/public/user/css/style.css
+++ b/src/public/user/css/style.css
@@ -1879,7 +1879,7 @@ tbody.collapse.in {
   background-color: #f5f5f5;
 }
 .dropdown-menu > .active > a,
-.dropdown-menu > .active > a:hover,
+.
 .dropdown-menu > .active > a:focus {
   color: #fff;
   text-decoration: none;
